--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,6 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  background-attachment: fixed;
   padding: 15px;
 }
